--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,7 +3,7 @@
 :root {
   font-size: 16px;
   font-family: 'Hahmlet', serif;
-  --c-bg: #e38233;
+  --c-bg: #f24e1e;
 }
 
 .mw {
@@ -16,11 +16,10 @@ img {
   width: 100%;
 }
 
-.App {
+/* Header 영역 */
+.wrap {
   background-color: var(--c-bg);
 }
-
-/* Header 영역 */
 .hd {
   display: flex;
   justify-content: space-between;
@@ -36,23 +35,35 @@ img {
 }
 
 /* MainBanner 영역 */
+.main {
+  background-color: var(--c-bg);
+  padding: 5.5rem 0 3rem;
+}
 .MainBanner {
-  border: 1px solid red;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.MainBanner img {
+  -webkit-animation-delay: 18s;
+  -moz-animation-delay: 18s;
+  -ms-animation-delay: 18s;
+  animation-delay: 18s;
 }
 .main_logo {
-  border: 1px solid yellow;
   width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  margin: 3rem auto;
+  margin: auto;
   position: relative;
 }
 .maps,
 .mart {
   width: 100%;
-  padding-top: 25%;
+  padding-top: 22%;
   position: relative;
 }
 .maps > img,
@@ -62,46 +73,248 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.maps {
+  animation: fadeInRotate ease-in backwards 2s;
+  animation-delay: 1s;
+}
+.mart {
+  animation: brrr 2s ease-in backwards;
+  animation-delay: 3s;
+}
 .mart > img {
   left: 70%;
 }
 .main_logoP {
   position: absolute;
-  bottom: -20%;
-  left: 0%;
-  width: 100%;
+  top: 0;
+  left: 100%;
+  width: 20%;
   font-size: 1.25rem;
+  color: beige;
+  animation: blurFadeIn 1s ease-in backwards 3s;
 }
-.circle {
-  border: 3px solid red;
-  width: 40%;
+.cartGif {
+  animation: blurFadeIn 1s ease-in backwards 3s;
+}
+.choice {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1rem;
+}
+.choice_left {
+  width: 50%;
+  text-align: end;
+  padding-right: 3rem;
+  animation: fadeInRotate ease-in backwards;
+  animation-duration: 0.5s;
+  animation-delay: 3s;
+}
+.choice_left svg {
+  cursor: pointer;
+}
+.choice_left svg:hover path:nth-of-type(1) {
+  fill: bisque;
+}
+.choice_left svg:hover path:nth-of-type(2) {
+  fill: green;
+}
+.choice_left svg:hover path:nth-of-type(3) {
+  fill: green;
+}
+.choice_right {
+  width: 50%;
+  padding-left: 3rem;
+  animation: fadeInRotate ease-in backwards;
+  animation-duration: 0.5s;
+  animation-delay: 3s;
+}
+.choice_right svg {
+  cursor: pointer;
+}
+.choice_right svg:hover path:nth-of-type(1) {
+  fill: white;
+}
+.choice_right svg:hover path:nth-of-type(2) {
+  fill: white;
+}
+.choice_right svg:hover {
+  fill: black;
+}
+@keyframes blurFadeIn {
+  0% {
+    opacity: 0;
+    text-shadow: 0px 0px 40px #fff;
+    transform: scale(1.3);
+  }
+  50% {
+    opacity: 0.5;
+    text-shadow: 0px 0px 10px #fff;
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 1;
+    text-shadow: 0px 0px 1px #fff;
+    transform: scale(1);
+  }
+}
+@keyframes fadeInRotate {
+  0% {
+    opacity: 0;
+    transform: scale(0) rotate(360deg);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1) rotate(0deg);
+  }
+}
+@keyframes brrr {
+  0% {
+    opacity: 0;
+    left: 100%;
+  }
+  5% {
+    opacity: 1;
+    left: 0%;
+  }
+  10% {
+    left: 51%;
+  }
+  15% {
+    left: 10%;
+  }
+  20% {
+    left: 41%;
+  }
+  25% {
+    left: 10%;
+  }
+  30% {
+    left: 31%;
+  }
+  35% {
+    left: 7%;
+  }
+  40% {
+    left: 21%;
+  }
+  45% {
+    left: 5%;
+  }
+  50% {
+    left: 16%;
+  }
+  60% {
+    left: 5%;
+  }
+  70% {
+    left: 12%;
+  }
+  80% {
+    left: 3%;
+  }
+  90% {
+    left: 8%;
+  }
+  100% {
+    left: 0%;
+  }
+}
+
+/* Footer 영역 */
+.ft {
+  display: flex;
+  align-items: center;
+}
+.ftLogo {
+  width: 120px;
+}
+.ftCon {
+  font-size: 2rem;
+}
+
+/* CartList 영역 */
+.CartList_name {
+  width: 100%;
+  font-size: 2rem;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  padding: 1rem 0;
+}
+.CartList_name span {
+  color: #39b54a;
+  margin-right: 0.5rem;
+}
+.CartList_name img {
+  width: 2rem;
+  margin-left: 0.5rem;
+}
+.CartList_ul {
+  width: 100%;
   display: flex;
   justify-content: space-between;
-  margin: 4rem auto;
+  align-items: center;
+  flex-wrap: wrap;
 }
-.circle img {
-  position: absolute;
+.CartList_li {
+  border: 3px solid #0f0f0f;
+  border-radius: 2rem;
+  overflow: hidden;
+
+  width: calc(100% / 2 - 1rem);
+  margin: 1rem 0;
+}
+.CartList_li:hover {
+  box-shadow: 6px 5px 1px #0f0f0f;
+}
+.CartList_li:nth-of-type(2n) {
+  margin-right: 0;
+}
+.CartList_Pcon {
+  border-bottom: 3px solid #0f0f0f;
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  background-color: #ff7bac;
 }
-.circle_left,
-.circle_right {
-  width: 50%;
-  padding-top: 30%;
-  position: relative;
-  border: 3px solid blue;
+.markCon {
+  width: 12%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-.circle_left img:nth-of-type(1) {
-  width: 30px;
-  top: 0;
-  right: 10%;
+.like {
+  width: 1.2rem;
+  height: 1.2rem;
 }
-.circle_left img:nth-of-type(2) {
-  width: 40px;
-  top: 30%;
-  right: 30%;
+.like path {
+  fill: transparent;
+  stroke-width: 20;
+  stroke: red;
+  cursor: pointer;
+  transition: 0.5s;
 }
-.circle_left img:nth-of-type(3) {
-  width: 50px;
-  top: 60%;
-  right: 50%;
+.like:hover svg path {
+  fill: #ff4b4b;
+}
+.bookmark {
+  cursor: pointer;
+}
+.bookmark:hover svg {
+  fill: #ffc700;
+}
+.CartList_contents {
+  padding: 1rem;
+}
+.LinkCon {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.CartList_more {
+  padding: 0.5rem;
 }
