--- a/src/css/App.css
+++ b/src/css/App.css
@@ -449,91 +449,6 @@ img {
 /* Self 영역 */
 /* Select 영역 */
 
-/* 참고영역 */
-.selectBox2 {
-  position: relative;
-  width: 150px;
-  height: 35px;
-  border-radius: 4px;
-  border: 2px solid lightcoral;
-  background: url('https://freepikpsd.com/media/2019/10/down-arrow-icon-png-7-Transparent-Images.png')
-    calc(100% - 7px) center no-repeat;
-  background-size: 20px;
-  cursor: pointer;
-}
-
-.selectBox2:after {
-  content: '';
-  display: block;
-  width: 2px;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  right: 35px;
-  background: lightcoral;
-}
-
-.selectBox2 .label {
-  display: flex;
-  align-items: center;
-  width: inherit;
-  height: inherit;
-  border: 0 none;
-  outline: 0 none;
-  padding-left: 15px;
-  background: transparent;
-  cursor: pointer;
-}
-
-.selectBox2 .optionList {
-  position: absolute;
-  top: 28px;
-  left: 0;
-  width: 100%;
-  background: lightcoral;
-  color: #fff;
-  list-style-type: none;
-  padding: 0;
-  border-radius: 6px;
-  overflow: hidden;
-  max-height: 0;
-  transition: 0.3s ease-in;
-}
-
-.selectBox2 .optionList::-webkit-scrollbar {
-  width: 6px;
-}
-.selectBox2 .optionList::-webkit-scrollbar-track {
-  background: transparent;
-}
-.selectBox2 .optionList::-webkit-scrollbar-thumb {
-  background: #303030;
-  border-radius: 45px;
-}
-.selectBox2 .optionList::-webkit-scrollbar-thumb:hover {
-  background: #303030;
-}
-
-.selectBox2.active .optionList {
-  max-height: 500px;
-}
-
-.selectBox2 .optionItem {
-  border-bottom: 1px dashed rgb(170, 72, 72);
-  padding: 5px 15px 5px;
-  transition: 0.1s;
-}
-
-.selectBox2 .optionItem:hover {
-  background: rgb(175, 93, 93);
-}
-
-.selectBox2 .optionItem:last-child {
-  border-bottom: 0 none;
-}
-
-/* 참고영역 끝 */
-
 .Select {
   display: flex;
   justify-content: space-between;
@@ -559,4 +474,86 @@ img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* SelfHotList 영역 */
+.SelfHotList {
+  margin: 1rem 0 3rem;
+}
+.SelfHotList_P {
+  font-weight: 700;
+  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  padding: 1rem 0;
+}
+.SelfHotList_P span {
+  color: #ff0000;
+  margin-right: 0.2rem;
+}
+.SelfHotList_P img {
+  margin-left: 0.2rem;
+  width: 1.2rem;
+}
+.SelfHotList_ImgCon {
+  position: relative;
+  overflow: hidden;
+  border: 2px solid #0f0f0f;
+  border-radius: 20px;
+  width: 100%;
+  padding-top: 100%;
+  cursor: pointer;
+}
+.SelfHotList_ImgCon > img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.3s;
+}
+.SelfHotList_ImgCon:hover > img {
+  transform: translate(-50%, -50%) scale(1.1);
+}
+/* .SelfHotList_ImgCon:hover .SelfHotList_like {
+  top: 0;
+} */
+.SelfHotList_ImgCon:hover .SelfHotList_name {
+  bottom: 0;
+}
+.SelfHotList_name {
+  transition: 0.3s;
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem;
+  background-color: #0f0f0f40;
+  color: #fff;
+}
+.SelfHotList_like {
+  transition: 0.3s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding: 0.5rem;
+  background-color: #0f0f0f20;
+  color: #fff;
+}
+.SelfHotList_like img {
+  width: 1rem;
+  height: 1rem;
+  margin: 0 0.2rem;
+}
+.swiper-pagination {
+  display: none;
 }
