--- a/src/css/App.css
+++ b/src/css/App.css
@@ -590,35 +590,105 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
   margin: 0.5rem 0;
   cursor: pointer;
+  position: relative;
 }
 .selfList_list:hover {
   box-shadow: 3px 3px 1px #0f0f0f;
 }
 .selfList_list_title {
-  width: 80%;
+  width: 100%;
+  font-size: 1rem;
+  padding: 0.3rem 1rem 0;
+}
+.selfList_list_Addr {
+  font-size: 0.7rem;
+  color: #888;
+  width: 100%;
   padding: 0.5rem 1rem;
+  padding-bottom: 2rem;
+  /* display: flex;
+  justify-content: space-between;
+  align-items: center; */
 }
 .selfList_imgCon {
-  width: 20%;
+  width: 100%;
+  text-align: end;
+  margin: 0.3rem 1rem 0;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 .selfList_list img {
   width: 1rem;
+  margin-right: 0.3rem;
 }
 
 /* paginations 영역 */
 .paginations {
   margin-bottom: 4rem;
+  display: flex;
+  align-items: center;
 }
 .paginations button {
   border: 2px solid #0f0f0f;
   border-radius: 6px;
   outline: none;
   padding: 0.3rem;
-  margin: 1rem 1rem 1rem 0;
   background-color: transparent;
 }
 .paginations button:hover {
   background-color: #39b54a;
+}
+.page-num {
+  margin: 0 1rem;
+}
+/* Tooltips 영역 */
+.selfList_list .btn_con {
+  width: 100%;
+  transition: 0.5s;
+  position: absolute;
+  bottom: -25%;
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.selfList_list:hover .btn_con {
+  bottom: 0;
+  opacity: 1;
+}
+.selfList_list .btn-primary {
+  border: none;
+  border-radius: 4px 4px 0 0;
+  outline: none;
+  font-size: 0.8rem;
+  padding: 0.5rem;
+  color: #fff;
+  width: 30%;
+  background-color: #00000050;
+}
+#popover-contained {
+  max-width: 534px;
+  width: 100%;
+}
+.toolTips_con {
+  background-color: transparent;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1rem;
+}
+.toolTips_map {
+  border: 1px solid red;
+  width: calc(50% - 1rem);
+}
+.toolTips_pcon {
+  border: 1px solid red;
+  width: calc(50% - 1rem);
+}
+.toolTips_pcon > p {
+  padding: 0.5rem 0;
 }
