--- a/src/css/App.css
+++ b/src/css/App.css
@@ -519,8 +519,12 @@ img {
 .SelfHotList_ImgCon:hover > img {
   transform: translate(-50%, -50%) scale(1.1);
 }
+
 .SelfHotList_name {
   transition: 0.5s;
+}
+
+.SelfHotList_name {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -794,7 +798,7 @@ img {
 .close {
   border: 1px solid #0f0f0f;
   border-radius: 4px;
-  font-size: 1rem;
+  font-size: 0.8rem;
   outline: none;
   background-color: transparent;
   margin-bottom: 2rem;
@@ -816,12 +820,12 @@ img {
   align-items: center;
   padding: 0.5rem 0;
 }
-.cart_con p:nth-of-type(1) {
+.cart_con .choiced {
   padding-left: 1rem;
   font-size: 0.9rem;
   font-weight: 700;
 }
-.cart_con p:nth-of-type(2) {
+.cart_con .del {
   border: 2px solid #0f0f0f;
   border-radius: 50%;
   width: 20px;
@@ -829,8 +833,12 @@ img {
   margin-right: 1rem;
   position: relative;
   cursor: pointer;
+  transition: 0.3s;
 }
-.cart_con p:nth-of-type(2)::after {
+.cart_con .del:hover {
+  border-color: #f24e1e;
+}
+.cart_con .del::after {
   content: '';
   width: 10px;
   height: 2px;
@@ -841,15 +849,15 @@ img {
   transform: translate(50%, -50%);
   transition: 0.3s;
 }
-.cart_con p:nth-of-type(2):hover::after {
-  background-color: tomato;
+.cart_con .del:hover::after {
+  background-color: #ff0000;
   transform: rotate(180deg) translate(-50%, 0%);
 }
 .cart_btns {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding: 0.5rem 0;
+  padding: 2rem 0;
 }
 .cart_btns button {
   margin-left: 0.5rem;
