--- a/src/css/App.css
+++ b/src/css/App.css
@@ -478,8 +478,8 @@ img {
 
 .Select {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
 }
 .Select .selectCon select {
   margin: 1rem 1rem 1rem 0;
@@ -498,11 +498,15 @@ img {
 .SelectImgCon {
   width: 40px;
   cursor: pointer;
+  margin-right: 0;
+  background-image: url(../../public/image/bag.png);
+  width: 40px;
+  height: 40px;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.SelectImgCon img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.SelectImgCon:hover {
+  background-image: url(../../public/image/bag_effect_copy.png);
 }
 
 /* SelfHotList 영역 */
@@ -678,6 +682,7 @@ img {
 .paginations {
   margin-bottom: 4rem;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 .paginations button {
@@ -695,6 +700,23 @@ img {
 }
 
 /* Tooltips 영역 */
+.popover-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.xbtn {
+  border: 2px solid white;
+  border-radius: 6px;
+  outline: none;
+  padding: 0 0.5rem;
+  font-family: sans-serif;
+}
+.xbtn:hover {
+  color: white;
+  background-color: tomato;
+}
+
 .selfList_list .btn_con {
   width: 100%;
   transition: 0.5s;
@@ -731,7 +753,8 @@ img {
   padding: 0.5rem 1rem;
   flex-wrap: wrap;
 }
-.toolTips_con p {
+.toolTips_con p,
+.popover-header {
   font-family: 'Hahmlet', serif;
 }
 .toolTips_map {
@@ -786,7 +809,7 @@ img {
   font-size: 1rem;
   font-family: 'Hahmlet', serif;
   color: #0f0f0f;
-  padding: 0.5rem 1.2rem;
+  padding: 0.3rem 0.8rem;
   margin-left: 0.5rem;
 }
 .toolTips_Pcon button:hover {
@@ -800,7 +823,6 @@ img {
 
 /* Cart 영역 */
 .cart_block {
-  border: 1px solid red;
   position: fixed;
   top: 0;
   right: -100%;
@@ -808,12 +830,12 @@ img {
   height: 100vh;
   background-color: white;
   z-index: 10;
-  box-shadow: 0 -5px 5px rgba(15, 15, 15, 0.5);
-  padding: 3rem 3rem;
+  box-shadow: 0 -5px 7px rgba(15, 15, 15);
+  padding: 1rem 1rem;
   transition: 0.3s;
 }
 .cart_block.active {
-  width: 20%;
+  width: 280px;
   right: 0;
 }
 .close_con {
@@ -823,18 +845,25 @@ img {
   align-items: center;
 }
 .close {
-  border: 1px solid #0f0f0f;
+  /* border: 1px solid #0f0f0f; */
+  border: none;
   border-radius: 4px;
+  background-color: transparent;
   font-size: 0.8rem;
   outline: none;
-  background-color: transparent;
   margin-bottom: 2rem;
   padding: 0.2rem 0.7rem;
   transition: 0.3s;
 }
-.close:hover {
-  background-color: tomato;
-  color: white;
+.close p {
+  background-image: url(../../public/image/bag_effect_copy.png);
+  width: 35px;
+  height: 35px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.close p:hover {
+  background-image: url(../../public/image/bag.png);
 }
 .cart_block > p {
   text-align: center;
@@ -1006,7 +1035,6 @@ img {
   color: white;
 }
 
-/* 반응형 */
 @media (max-width: 900px) {
   /* main 영역 */
   .choice {
@@ -1015,6 +1043,13 @@ img {
   .choice_left svg,
   .choice_right svg {
     width: 80%;
+  }
+  /* tooltips 영역 */
+  .toolTips_Pcon button {
+    font-size: 0.9rem;
+    padding: 0.1rem 0.8rem;
+    margin-top: 1rem;
+    margin-left: 0.5rem;
   }
 }
 
@@ -1047,6 +1082,9 @@ img {
   .Select .selectCon option {
     font-size: 0.8rem;
   }
+  .selfList_li {
+    width: 100%;
+  }
   .selfList_imgCon {
     font-size: 0.8rem;
   }
@@ -1065,6 +1103,49 @@ img {
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+  .toolTips_Pcon button {
+    font-size: 0.9rem;
+    padding: 0.1rem 0.8rem;
+    margin-top: 1rem;
+    margin-left: 0.5rem;
+  }
+}
+
+@media (max-width: 600px) {
+  .toolTips_map,
+  .toolTips_pcon {
+    width: calc(50% - 0.5rem);
+  }
+  .toolTips_pcon > p {
+    padding: 0.3rem 0;
+    font-size: 0.4rem;
+  }
+  .toolTips_pcon strong {
+    font-size: 0.7rem;
+  }
+  .toolTips_pcon .toolTips_title {
+    font-size: 0.9rem;
+  }
+  .toolTips_summ span {
+    height: 7vh;
+  }
+  .toolTips_Pcon {
+    padding: 0.3rem 0;
+  }
+  .toolTips_Pcon button {
+    font-size: 0.7rem;
+    padding: 0.1rem 0.8rem;
+    margin-top: 1rem;
+    margin-left: 0.5rem;
+  }
+  #map {
+    width: 100%;
+    height: 230px;
+  }
+  .selfList_list .btn-primary {
+    width: 20%;
+    padding: 0.3rem;
+  }
 }
 
 @media (max-width: 400px) {
@@ -1079,6 +1160,31 @@ img {
   }
   .SelectImgCon {
     width: 30px;
+    height: 30px;
+  }
+  .toolTips_map,
+  .toolTips_pcon {
+    width: 100%;
+  }
+  #map {
+    width: 100%;
+    height: 100px;
+  }
+  .toolTips_Pcon button {
+    margin-top: 0.2rem;
+  }
+  .selfList_list .btn-primary {
+    width: 25%;
+    padding: 0.2rem;
+    font-size: 0.6rem;
+  }
+  /* paginations 영역 */
+  .paginations button {
+    padding: 0.3rem;
+    font-size: 0.6rem;
+  }
+  .page-num {
+    font-size: 0.9rem;
   }
 }
 
